k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immopredict-api-service
spec:
  selector:
    app: immopredict-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
