k8s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immopredict-client-service
spec:
  selector:
    app: immopredict-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
