k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immopredict-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: immopredict-api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immopredict-client-service
                port:
                  number: 80
